fixing header spacing

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1338,7 +1338,7 @@
 						color: #c6c8c8;
 						text-decoration: none;
 						font-size: 1.4em;
-						margin-left: 60px;
+						margin-left: 30px;
 						outline: 0;
 					}
 
